--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+.app   {
+    margin: 1rem;
+    padding: 1rem;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+table{
+    border: solid 1px #b3b3b3;
+    margin: 1rem;
+    min-width: 20px;
+    min-height: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+td{
+    min-width: 15px;
+    text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+td:hover{
+    background: #eee;
+    cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+button{
+    margin: .3rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button.active{
+    outline: solid 3px #7978b3;
+}
+.flex-container{
+    display: flex;
+}
+.sidebar{
+    display: flex;
+    flex-direction: column;
+}
+.working-field{
+    background: #dedede;
+    width: 800px;
+    height: 600px;
 }
